@startuml
'https://plantuml.com/class-diagram
hide circle
class DashboardRepository <<interface>>

title Class Diagram / As a Project Manager, I want to know the number of active subscriptions or canceled subscriptions in a specific month



class Dashboard{
    -totalActiveSubscriptions
    - totalCanceledSubscriptions
}
class DashboardViewMapper{
    +toDashboardView(Dashboard dashboard):DashboardView
}
class DashboardController{
    getDashboardView(int year,int month,boolean onlyActive,boolean onlyCancelled,String startDate,String endDate):DashboardView
    }
class DashboardService{
    getDashboardView(int year, int month):Dashboard
    getTotalNewSubscriptions(int year, int month):Dashboard
    getTotalCancelledSubscriptions(int year, int month):Dashboard
    getTotalCancelledSubscriptionsByDate(int year,int month,String startDate, String endDate):Dashboard
    getTotalActiveSubscriptionsByDate(int year, int month, String startDate, String endDate):Dashboard

}
class CreateDashboardMapper{
    +public abstract Dashboard create(Integer active, Integer canceled):Dashboard
    +public abstract Dashboard createActive(Integer active):Dashboard
    +public abstract Dashboard createCancelled(Integer canceled):Dashboard

}

interface DashboardRepository
{
+findTotalActiveSubscriptions(String startDate,String endDate);
+findTotalCanceledSubscriptions(String startDate,String endDate);

}


DashboardController ..> DashboardService: uses >
DashboardService ..> DashboardRepository: uses >
DashboardRepository ..> Dashboard: < record
DashboardService ..> CreateDashboardMapper: uses >
DashboardController ..>DashboardViewMapper: uses >

@enduml